<resources>
    <string name="app_name">Android Labs</string>
    <string name="email_prompt">Enter your email address:</string>
    <string name="email_hint">Type email here</string>
    <string name="pass_prompt">Type your password:</string>
    <string name="button1">Login</string>
    <string name="profile_top">Your profile</string>
    <string name="name_prompt">Your name:</string>
    <string name="email_prompt2">Your Email:</string>
    <string name="picture_prompt">Your Picture</string>
    <string name="picture_prompt2">Click the button above to take a picture</string>
    <string name="name_hint">Enter  your name</string>
    <string name="email_hint2">Enter your email</string>
    <string name="GotoChat">Go to chat</string>
    <string name="button_Send">Send</string>
    <string name="button_Receive">Receive</string>
    <string name="chat_hint">Type Here</string>
    <string name="toolbarButton">Go to Test Toolbar</string>
</resources>
