<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <ListView
        android:id="@+id/List_Chat"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_Send" />

        <EditText
            android:id="@+id/chatInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/chat_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonReceieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Receive" />
    </LinearLayout>

</LinearLayout>